# trapstreet-eval-demo

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
scripts/: fetch_financebench.sh  run_demo.sh
skill/: install.sh
skill/trapstreet-eval/: SKILL.md  questions.json
trapstreet_eval/: __init__.py  data.py  grader.py  pdf_utils.py  report.py  runner.py
trapstreet_eval/agents/: __init__.py  base.py  claude.py  naive.py  openai_baseline.py  your_agent.py
